# argparse_to_md

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  pre-commit.yml
argparse_to_md/: __init__.py  __main__.py  formatter.py  loader.py  markdown_processor.py
test/: test_formatter.py  test_usage.py
test/data/: test1.md.expected  test1.md.in  test1.py  test2.md.expected  test2.md.in  test2.py  test3.md.expected  test3.md.in  test3.py
