[metadata]
name = argparse_to_md
version = attr: argparse_to_md.__version__
description = Pre-commit hook to generate markdown documentation from argparse-based CLI scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igrr/argparse_to_md
author = Ivan Grokhotkov
author_email = ivan@espressif.com
license = MIT
license_files = LICENSE
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[options.extras_require]
dev =
    pytest
    pre-commit

[options.entry_points]
console_scripts =
    argparse_to_md = argparse_to_md.__main__:main

[bdist_wheel]
universal = True
